# monobd

./: .copier-answers.yml  .cruft.json  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  zensical.toml
.github/workflows/: audit.yaml  cd.yml  ci.yaml  ci.yml  docs.yaml  release.yaml
docs/: api.md  releasing.md  setup.md
docs/development/: workflow.md
monobd/: __init__.py  example.py  watch.py
monobd/common/: model.py  registry.py
monobd/models/: __init__.py  avrack.py  bunting.py  dog_poop_bag_dispenser_wall_mount.py  emt_extension.py  example.py  fair.py  hardware_screw_handle.py  pcb_esp_3dp.py  rgblight.py  router_jig.py  zigbee_door_sensor_mount.py
monobd/models/avrack/: __init__.py  constants.py  frame.py  model.py  tray.py
monobd/models/bike/: speaker.py
monobd/models/bikecard/: model.py
monobd/models/dog/: __init__.py  poop_bag_dispenser_wall_mount.py
monobd/models/emt/: __init__.py  models.py
monobd/models/hardware/: __init__.py  screw_handle.py
monobd/models/pcb/: __init__.py  esp_3dp.py
monobd/models/qr/: __init__.py  qr_code.py
monobd/models/qr/assets/: __init__.py
monobd/objects/: __init__.py  hatches.py  hexagons.py  hole.py  svg.py
monobd/parts/: example.py
monobd/utils/: bdrender.py  bdshow.py  bdview.py
tests/: conftest.py  test_common_model.py  test_module.py  test_version.py
tests/models/: test_example.py  test_qr_code.py
