[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[project]
name = "monobd"
description = "Monorepository of build123d models"
license = "GPL-3.0-or-later"
authors = [ { name = "Stephen Kent", email = "smkent@smkent.net" } ]
readme = "README.md"
repository = "https://github.com/smkent/monobd"
classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.10,<3.13"
dynamic = [ "version" ]
dependencies = [
    "build123d (>=0.9.0,<0.10.0)",
    # "cadquery (>=2.5.2,<3.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "qrcode (>=8.2,<9.0)",
]

[project.scripts]
bdview = "monobd.utils.bdview:main"
bdrender = "monobd.utils.bdrender:main"

[tool.poetry]
requires-poetry = ">=2.0"
version = "0.0.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry.group.dev.dependencies]
bandit = {extras = ["toml"], version = "*"}
cruft = "*"
mypy = "*"
ocp-vscode = "^2.6.1"
poethepoet = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-github-actions-annotate-failures = "*"
pytest-sugar = "*"
ruff = "*"
types-psutil = "^7.0.0.20250218"
watchdog = "^6.0.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poe.tasks.lint]
cmd = "pre-commit run --all-files --show-diff-on-failure"
help = "Check all files"

[tool.poe.tasks.pytest]
cmd = "pytest"
help = "Run unit tests with pytest"

[tool.poe.tasks.test]
sequence = ["lint", "pytest"]
help = "Run all tests"

[tool.bandit]
skips = ["B101"]  # assert_used

[tool.coverage.run]
source = ["monobd"]

[tool.coverage.report]
fail_under = 0
show_missing = true

[tool.cruft]
skip = [".git"]

[tool.mypy]
files = [ "tests", "monobd" ]
mypy_path = "types"
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true

[tool.pytest]
testpaths = ['tests']
addopts = [
    "--cov",
    "--cov-append",
    "--cov-report=term",
    "--cov-report=xml:.pytest_coverage.xml",
    "--junitxml=.pytest_results.xml",
]

[tool.ruff]
target-version = "py310"
line-length = 79
fix = true

exclude = [
  ".git",
  ".venv",
  "__pycache__",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
  "E", "W",     # pycodestyle
  "F",          # pyflakes
  "I",          # isort
  "B",          # bugbear
  "SIM",        # flake8-simplify
  "N",          # pep8-naming
  "UP",         # pyupgrade
]

# vim: ft=cfg
